@startuml
skinparam classAttributeIconSize 0

package com.legends.database {

  class DatabaseConnection {
    -URL : String
    -USER : String
    -PASSWORD : String
    +getConnection() : Connection
  }

  class UserDAO {
    +createUser(username : String, password : String) : boolean
    +login(username : String, password : String) : Profile
    +updateProgress(profile : Profile) : void
    +resetProgress(profile : Profile) : void
  }

  interface IUserDAO {
    +createUser(username : String, password : String) : boolean
    +login(username : String, password : String) : Profile
    +updateProgress(profile : Profile) : void
    +resetProgress(profile : Profile) : void
  }

  UserDAO ..|> IUserDAO
}

package com.legends.model {
  class Profile {
    -username : String
    -password : String
    -partyLevel : int
    -roomCount : int
  }
}

database MySQL

' Relationships
UserDAO --> DatabaseConnection : uses
UserDAO --> Profile : maps data
DatabaseConnection --> MySQL : JDBC connection

@enduml
